zh_cn lang fix: corp

--- a/common/src/main/resources/assets/hexxyskies/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexxyskies/lang/zh_cn.json
@@ -10,7 +10,7 @@
   "hexcasting.mishap.ship_too_far": "无效船只！船只“%s”距离过远！",
 
   "hexxyskies.entry.navimancy.basics": "航行术 101",
-  "hexxyskies.page.basics.navimancy.intro": "虽然许多生物性、机械性、媒质融注性构造都能从环境中独立出来，但它们仍受到诸多物理限制，或是无法具有物理实体，或是无法搭载其他构造。而在导航军团的帮助之下，我成功地将世界的一部分组装为了刚性的独立物体，称作$(thing)船只$()，且能控制它们。",
+  "hexxyskies.page.basics.navimancy.intro": "虽然许多生物性、机械性、媒质融注性构造都能从环境中独立出来，但它们仍受到诸多物理限制，或是无法具有物理实体，或是无法搭载其他构造。而在导航联合会的帮助之下，我成功地将世界的一部分组装为了刚性的独立物体，称作$(thing)船只$()，且能控制它们。",
   "hexxyskies.title.basics.navimancy.space": "参考空间",
   "hexxyskies.page.basics.navimancy.space.world": "$(thing)世界空间$()是当前的游玩区域，渲染$(thing)船只$()和与之交互使用此空间的位置。在$(thing)世界空间$()中施加的力和力矩处于全局环境，其效果不受$(thing)船只$()朝向和尺寸的影响。偏移量的计算以$(thing)世界空间$()中$(l:patterns/navimancy#hexxyskies:com/world)质心$()的位置为基准。",
   "hexxyskies.page.basics.navimancy.space.model_body": "$(thing)船载空间或模型空间$()是$(thing)船只$()实际存在的空间，引用它们使用此空间的位置。在$(thing)模型空间$()中施加的力和力矩处于局部环境，且其效果会受$(thing)船只$()朝向和尺寸的影响。偏移量的计算以$(thing)模型空间$()中$(l:patterns/navimancy#hexxyskies:com/model)质心$()的位置为基准。$(br2)$(thing)物体空间$()与$(thing)模型空间$()类似，但其质心固定为 (0, 0, 0)。",
