--- a/common/src/main/resources/assets/hexxyskies/lang/en_us.json
+++ b/common/src/main/resources/assets/hexxyskies/lang/en_us.json
@@ -83,12 +83,12 @@
   "hexxyskies.page.navimancy.patterns.spells.force.world": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Force$() at a given $(l:basics/navimancy#hexxyskies:page/space/world)World Space$() position. The position is any offset from the $(l:patterns/navimancy#hexxyskies:com/world)Center of Mass$() in $(thing)World Space$().",
   "hexcasting.action.hexxyskies:torque/world": "Nature's Twist",
   "hexxyskies.page.navimancy.patterns.spells.torque.world": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Torque$() specified by the vector in $(l:basics/navimancy#hexxyskies:page/space/world)World Space$().",
-  "hexcasting.action.hexxyskies:force/body": "Shipyard's Push",
-  "hexxyskies.page.navimancy.patterns.spells.force.body": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Force$() at a given $(l:basics/navimancy#hexxyskies:page/space/model_body)Model Space$() position. The position is any offset from the $(l:patterns/navimancy#hexxyskies:com/model)Center of Mass$() in $(thing)Model Space$().",
-  "hexcasting.action.hexxyskies:torque/body": "Shipyard's Twist",
-  "hexxyskies.page.navimancy.patterns.spells.torque.body": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Torque$() specified by the vector in $(l:basics/navimancy#hexxyskies:page/space/model_body)Model Space$()",
-  "hexcasting.action.hexxyskies:force/model": "Helmsman's Push",
-  "hexxyskies.page.navimancy.patterns.spells.force.model": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Force$() at a given $(l:basics/navimancy#hexxyskies:page/space/model_body)Body Space$() position. The position is any offset from the Center of Mass in $(thing)Body Space$() which is always (0, 0, 0).",
-  "hexcasting.action.hexxyskies:torque/model": "Helmsman's Twist",
-  "hexxyskies.page.navimancy.patterns.spells.torque.model": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Torque$()  specified by the vector in $(l:basics/navimancy#hexxyskies:page/space/model_body)Body Space$()."
+  "hexcasting.action.hexxyskies:force/model": "Shipyard's Push",
+  "hexxyskies.page.navimancy.patterns.spells.force.model": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Force$() at a given $(l:basics/navimancy#hexxyskies:page/space/model_body)Model Space$() position. The position is any offset from the $(l:patterns/navimancy#hexxyskies:com/model)Center of Mass$() in $(thing)Model Space$().",
+  "hexcasting.action.hexxyskies:torque/model": "Shipyard's Twist",
+  "hexxyskies.page.navimancy.patterns.spells.torque.model": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Torque$() specified by the vector in $(l:basics/navimancy#hexxyskies:page/space/model_body)Model Space$()",
+  "hexcasting.action.hexxyskies:force/body": "Helmsman's Push",
+  "hexxyskies.page.navimancy.patterns.spells.force.body": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Force$() at a given $(l:basics/navimancy#hexxyskies:page/space/model_body)Body Space$() position. The position is any offset from the Center of Mass in $(thing)Body Space$() which is always (0, 0, 0).",
+  "hexcasting.action.hexxyskies:torque/body": "Helmsman's Twist",
+  "hexxyskies.page.navimancy.patterns.spells.torque.body": "Applies a $(l:basics/navimancy#hexxyskies:page/forces_torques)Torque$()  specified by the vector in $(l:basics/navimancy#hexxyskies:page/space/model_body)Body Space$()."
 }
