zh_cn lang update

--- a/common/src/main/resources/assets/hexxyskies/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexxyskies/lang/zh_cn.json
@@ -10,9 +10,9 @@
   "hexcasting.mishap.ship_too_far": "无效船只！船只“%s”距离过远！",
 
   "hexxyskies.entry.navimancy.basics": "航行术 101",
-  "hexxyskies.page.basics.navimancy.intro": "虽然许多生物性、机械性、媒质融注性构造都能从环境中独立出来，但它们仍受到诸多物理限制，或是无法具有物理实体，或是无法搭载其他构造。而在导航联合会的帮助之下，我成功地将世界的一部分组装为了刚性的独立物体，称作$(thing)船只$()，且能控制它们。",
+  "hexxyskies.page.basics.navimancy.intro": "虽然许多生物性、机械性、媒质融注性构造都能从环境中独立出来，但它们仍受到诸多物理限制，或是无法具有物理实体，或是无法搭载其他构造。而在导航联合会的帮助之下，我成功地将世界的一部分组装为了刚性的独立物体（称作$(thing)船只$()），且能控制它们。",
   "hexxyskies.title.basics.navimancy.space": "参考空间",
-  "hexxyskies.page.basics.navimancy.space.world": "$(thing)世界空间$()是当前的游玩区域，渲染$(thing)船只$()和与之交互使用此空间的位置。在$(thing)世界空间$()中施加的力和力矩处于全局环境，其效果不受$(thing)船只$()朝向和尺寸的影响。偏移量的计算以$(thing)世界空间$()中$(l:patterns/navimancy#hexxyskies:com/world)质心$()的位置为基准。",
+  "hexxyskies.page.basics.navimancy.space.world": "$(thing)世界空间$()是当前的游玩区域，$(thing)船只$()的渲染和交互使用此空间的位置。在$(thing)世界空间$()中施加的力和力矩处于全局环境，其效果不受$(thing)船只$()朝向和尺寸的影响。偏移量的计算以$(thing)世界空间$()中$(l:patterns/navimancy#hexxyskies:com/world)质心$()的位置为基准。",
   "hexxyskies.page.basics.navimancy.space.model_body": "$(thing)船载空间或模型空间$()是$(thing)船只$()实际存在的空间，引用它们使用此空间的位置。在$(thing)模型空间$()中施加的力和力矩处于局部环境，且其效果会受$(thing)船只$()朝向和尺寸的影响。偏移量的计算以$(thing)模型空间$()中$(l:patterns/navimancy#hexxyskies:com/model)质心$()的位置为基准。$(br2)$(thing)物体空间$()与$(thing)模型空间$()类似，但其质心固定为 (0, 0, 0)。",
   "hexxyskies.title.basics.navimancy.forces_torques": "力与力矩",
   "hexxyskies.page.basics.navimancy.forces_torques": "$(thing)力$()是作用于$(thing)船只$()的直线推拉效应，施加点由所给参考空间和所给相对质心偏移量得出。$(br2)$(thing)力矩$()是作用于$(thing)船只$()的旋转推拉效应，施加点由所给参考空间和所给相对质心偏移量得出。",
@@ -33,7 +33,7 @@
   "hexxyskies.page.navimancy.interop.hexical.assemble": "接受一个网斑，将其中各点组装为$(thing)船只$()。所有位置都须在影响范围内。每个位置消耗 1 个紫水晶碎片。",
 
   "hexxyskies.entry.navimancy.interop.hexodus": "Hexodus 航行术",
-  "hexxyskies.entry.navimancy.interop.hexodus.change_gravity": "接受一个$(thing)船只$()，一个代表新重力方向的轴向向量，以及相对于标准重力强度的倍数。",
+  "hexxyskies.entry.navimancy.interop.hexodus.change_gravity": "接受一个$(thing)船只$()，一个代表新重力方向的轴向向量，以及相对于标准重力强度的倍数。每有 1 千克的质量消耗 1 个紫水晶粉。",
   "hexxyskies.entry.navimancy.interop.hexodus.get_duration": "返回$(l:interop/hexodus_navimancy#hexodus:change_gravity)$(action)施重力$()的效果在$(thing)船只$()上还会持续多少个 1/20 秒。若$(thing)船只$()未受$(l:interop/hexodus_navimancy#hexodus:change_gravity)$(action)施重力$()影响，则返回 0。",
   "hexxyskies.entry.navimancy.interop.hexodus.get_direction": "返回$(l:interop/hexodus_navimancy#hexodus:change_gravity)$(action)施重力$()对$(thing)船只$()的施力方向。若$(thing)船只$()未受$(l:interop/hexodus_navimancy#hexodus:change_gravity)$(action)施重力$()影响，则返回 $(l:casting/influences)$(thing)Null$()。",
   "hexxyskies.entry.navimancy.interop.hexodus.get_strength": "返回$(l:interop/hexodus_navimancy#hexodus:change_gravity)$(action)施重力$()的效果强度相对基线的倍数。若$(thing)船只$()未受$(l:interop/hexodus_navimancy#hexodus:change_gravity)$(action)施重力$()影响，则返回 $(l:casting/influences)$(thing)Null$()。",
@@ -41,8 +41,7 @@
   "hexxyskies.entry.navimancy.interop.hexodus.get_true_strength": "返回$(thing)船只$()所受$(thing)重力$()的强度相对基线的倍数。",
 
   "hexxyskies.entry.navimancy.interop.moreiotas": "MoreIotas 航行术",
-  "hexcasting.action.hexxyskies:slug": "造船工之纯化",
-  "hexxyskies.page.navimancy.interop.moreiotas.slug": "返回$(thing)船只$()的 Slug。",
+  "hexxyskies.page.navimancy.interop.moreiotas.slug": "接受一个$(thing)船只$()，而后返回该$(thing)船只$()的 slug。",
   "hexcasting.action.hexxyskies:matrix/moment_of_inertia_tensor": "惯量之纯化",
   "hexxyskies.page.navimancy.interop.moreiotas.matrix.moment_of_inertia_tensor": "将$(thing)船只$()的转动惯量张量返回为 3x3 矩阵。",
   "hexcasting.action.hexxyskies:matrix/world_ship": "迎风之纯化",
@@ -68,7 +67,7 @@
   "hexcasting.action.hexxyskies:velocity/linear": "步态之纯化",
   "hexxyskies.page.navimancy.patterns.velocity.linear": "返回$(thing)船只$()的线速度。",
   "hexcasting.action.hexxyskies:velocity/angular": "步态之纯化，第二型",
-  "hexxyskies.page.navimancy.patterns.velocity.angular": "但会$(thing)船只$()的角速度。",
+  "hexxyskies.page.navimancy.patterns.velocity.angular": "返回$(thing)船只$()的角速度。",
   "hexcasting.action.hexxyskies:aabb": "船形之纯化",
   "hexxyskies.page.navimancy.patterns.aabb": "返回$(thing)船只$() AABB 箱的最小和最大角落，以$(l:basics/navimancy#hexxyskies:page/space/model_body)模型空间$()为参考系。$(br2)也许和$(thing)咒法结构$()配合使用就可以拆解船只了……",
 
@@ -76,17 +75,20 @@
   "hexcasting.action.hexxyskies:assemble": "组装",
   "hexxyskies.page.navimancy.patterns.spells.assemble": "接受一个位置列表，用其组装$(thing)船只$()。所有位置都须在影响范围内。每个位置效果 1 个紫水晶碎片。",
   "hexcasting.action.hexxyskies:scale/set": "自然之欢愉",
-  "hexxyskies.page.navimancy.patterns.spells.scale.set": "将所给$(thing)船只$()缩放至所给尺寸。尺寸必须在 1/16 到 16 之间。消耗尺寸比值个紫水晶碎片。",
+  "hexxyskies.page.navimancy.patterns.spells.scale.set": "将所给$(thing)船只$()缩放至所给尺寸。尺寸必须在 1/16 到 16 之间。尺寸比值为多少，即消耗多少个紫水晶碎片。",
+  "hexxyskies.page.navimancy.patterns.spells.force.title": "力与力矩",
+  "hexxyskies.page.navimancy.patterns.spells.force.explanation": "由于航行术拥有极其巨大的力量，在对$(thing)船只$()施加$(thing)力$()和$(thing)力矩$()时，自然会支取大量代价。消耗的计算公式为：$(br2)C=0.1+10×($(l)$(o)F→$()÷(60×m×10))²×√(m÷1000)$(br)其中，$(l)$(o)F→$() 为$(thing)力$()或$(thing)力矩$()的长度，m 为$(thing)船只$()的质量。$(br2)也即，若需在一次施法（持续时间为 1/60 秒，所以公式中有一个 60）中将 1Mg 的$(thing)船只$()加速到 10 格/秒，消耗量会是 10.1 个紫水晶粉。",
+  "hexxyskies.page.navimancy.patterns.spells.force.explanation2": "除去基础消耗外，对同一船只加速多次也会增加消耗，就和驱动一样。不过，加速度固定时，质量增加不会导致消耗剧烈增长。换言之，即便是极其轻盈的小船，我也无法让它不断升高；但只要足够小心谨慎，庞然大物也可以悬停在空中……",
   "hexcasting.action.hexxyskies:force/world": "自然之推动",
   "hexxyskies.page.navimancy.patterns.spells.force.world": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力$()。该位置视作相对$(thing)世界空间$()中$(l:patterns/navimancy#hexxyskies:com/world)质心$()的偏移量。",
   "hexcasting.action.hexxyskies:torque/world": "自然之扭转",
-  "hexxyskies.page.navimancy.patterns.spells.torque.world": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力矩$()。该位置视作相对$(thing)世界空间$()中$(l:patterns/navimancy#hexxyskies:com/world)质心$()的偏移量。",
-  "hexcasting.action.hexxyskies:force/body": "船载之推动",
-  "hexxyskies.page.navimancy.patterns.spells.force.body": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力$()。该位置视作相对$(thing)模型空间$()中$(l:patterns/navimancy#hexxyskies:com/model)质心$()的偏移量。",
-  "hexcasting.action.hexxyskies:torque/body": "船载之扭转",
-  "hexxyskies.page.navimancy.patterns.spells.torque.body": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力矩$()。该位置视作相对$(thing)模型空间$()中$(l:patterns/navimancy#hexxyskies:com/model)质心$()的偏移量。",
-  "hexcasting.action.hexxyskies:force/model": "舵手之推动",
-  "hexxyskies.page.navimancy.patterns.spells.force.model": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力$()。该位置视作相对$(thing)物体空间$()中质心的偏移量，即相对 (0, 0, 0) 的偏移量。",
-  "hexcasting.action.hexxyskies:torque/model": "舵手之扭转",
-  "hexxyskies.page.navimancy.patterns.spells.torque.model": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力矩$()。该位置视作相对$(thing)物体空间$()中质心的偏移量，即相对 (0, 0, 0) 的偏移量。"
+  "hexxyskies.page.navimancy.patterns.spells.torque.world": "根据在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()参考系下的向量施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力矩$()。",
+  "hexcasting.action.hexxyskies:force/model": "船载之推动",
+  "hexxyskies.page.navimancy.patterns.spells.force.model": "在$(l:basics/navimancy#hexxyskies:page/space/model_body)模型空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力$()。该位置视作相对$(thing)模型空间$()中$(l:patterns/navimancy#hexxyskies:com/model)质心$()的偏移量。",
+  "hexcasting.action.hexxyskies:torque/model": "船载之扭转",
+  "hexxyskies.page.navimancy.patterns.spells.torque.model": "根据在$(l:basics/navimancy#hexxyskies:page/space/model_body)模型空间$()参考系下的向量施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力矩$()。",
+  "hexcasting.action.hexxyskies:force/body": "舵手之推动",
+  "hexxyskies.page.navimancy.patterns.spells.force.body": "在$(l:basics/navimancy#hexxyskies:page/space/model_body)物体空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力$()。该位置视作相对$(thing)物体空间$()中质心的偏移量，即相对 (0, 0, 0) 的偏移量。",
+  "hexcasting.action.hexxyskies:torque/body": "舵手之扭转",
+  "hexxyskies.page.navimancy.patterns.spells.torque.body": "根据在$(l:basics/navimancy#hexxyskies:page/space/model_body)物体空间$()参考系下的向量施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力矩$()。"
 }
