zh_cn lang update

--- a/common/src/main/resources/assets/hexxyskies/lang/zh_cn.json
+++ b/common/src/main/resources/assets/hexxyskies/lang/zh_cn.json
@@ -77,7 +77,7 @@
   "hexcasting.action.hexxyskies:scale/set": "自然之欢愉",
   "hexxyskies.page.navimancy.patterns.spells.scale.set": "将所给$(thing)船只$()缩放至所给尺寸。尺寸必须在 1/16 到 16 之间。尺寸比值为多少，即消耗多少个紫水晶碎片。",
   "hexxyskies.page.navimancy.patterns.spells.force.title": "力与力矩",
-  "hexxyskies.page.navimancy.patterns.spells.force.explanation": "由于航行术拥有极其巨大的力量，在对$(thing)船只$()施加$(thing)力$()和$(thing)力矩$()时，自然会支取大量代价。消耗的计算公式为：$(br2)C=0.1+10×($(l)$(o)F→$()÷(60×m×10))²×√(m÷1000)$(br)其中，$(l)$(o)F→$() 为$(thing)力$()或$(thing)力矩$()的长度，m 为$(thing)船只$()的质量。$(br2)也即，若需在一次施法（持续时间为 1/60 秒，所以公式中有一个 60）中将 1Mg 的$(thing)船只$()加速到 10 格/秒，消耗量会是 10.1 个紫水晶粉。",
+  "hexxyskies.page.navimancy.patterns.spells.force.explanation": "由于航行术拥有极其巨大的力量，在对$(thing)船只$()施加$(thing)力$()和$(thing)力矩$()时，自然会支取大量代价。消耗的计算公式为：$(br)[tex+C=0.1+10\\times(\\frac{\\vec{F}}{60\\times\\\\m\\times10})^{2}\\times\\sqrt{\\frac{m}{1000}}]$(br)其中，[latex,\\vec{F}] 为$(thing)力$()或$(thing)力矩$()的长度，$(o)m$() 为$(thing)船只$()的质量。$(br2)也即，若需在一次施法（持续时间为 1/60 秒，所以公式中有一个 60）中将 1Mg 的$(thing)船只$()加速到 10 格/秒，消耗量会是 10.1 个紫水晶粉。",
   "hexxyskies.page.navimancy.patterns.spells.force.explanation2": "除去基础消耗外，对同一船只加速多次也会增加消耗，就和驱动一样。不过，加速度固定时，质量增加不会导致消耗剧烈增长。换言之，即便是极其轻盈的小船，我也无法让它不断升高；但只要足够小心谨慎，庞然大物也可以悬停在空中……",
   "hexcasting.action.hexxyskies:force/world": "自然之推动",
   "hexxyskies.page.navimancy.patterns.spells.force.world": "在$(l:basics/navimancy#hexxyskies:page/space/world)世界空间$()中所给位置处施加$(l:basics/navimancy#hexxyskies:page/forces_torques)力$()。该位置视作相对$(thing)世界空间$()中$(l:patterns/navimancy#hexxyskies:com/world)质心$()的偏移量。",
